ChromeExtension/src/elements/spinner.scss
.spinnerBox {
  position: relative;
  width: 35px;
  height: 35px;
  z-index: 13;
}

.spinner {
  border: 5px solid $spinnerColor1;
  border-radius: 50%;
  border-top: 5px solid $spinnerColor2;
  width: 100%;
  height: 100%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.overflow {
  z-index: 12;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: black;
  opacity: 0.4;
}

